Update of pipe with mongodb score export

--- a/pipes/run_model.Rmd
+++ b/pipes/run_model.Rmd
@@ -17,12 +17,12 @@ devtools::load_all()
 database <- "test_signauxfaibles"
 collection <- "Features"
 actual_period <- as.Date("2019-03-01")
-# periods <- seq.Date(from = as.Date("2014-01-01"),
-#  to = actual_period, by = "months")
-last_batch <- '1904'
+periods <- actual_period
+last_batch <- "1905"
 min_effectif <- 10
-retrain_model <- FALSE
+retrain_model <- TRUE
 type <- "dataframe"
+export_type <- c("csv", "mongodb")
 ```
 
 ```{r}
@@ -37,7 +37,9 @@ res <- full_light_gradient_boosting(
   last_batch,
   min_effectif,
   retrain_model = retrain_model,
-  type = type)
+  type = type,
+  export_type = export_type
+  )
 ```
 
 ```{r}
