--- a/pipes/reference_model.Rmd
+++ b/pipes/reference_model.Rmd
@@ -55,7 +55,7 @@ task <- load_new_data(
 ```
 ```{r}
 task <- prepare(task, data_names = c("new_data"))
-task <- predict(task)
+task <- predict(task, data_names = c("new_data"))
 ```
 
 ```{r}
