Export fonctionne - a besoin de tests

--- a/pipes/reference_model.Rmd
+++ b/pipes/reference_model.Rmd
@@ -53,10 +53,15 @@ task <- load_new_data(
   periods = actual_period
   )
 ```
+
 ```{r}
 task <- prepare(task, data_names = c("new_data"))
 task <- predict(task, data_names = c("new_data"))
 ```
+```{r}
+export(task)
+```
+
 
 ```{r}
 task <- evaluate(task)
