Adapting to changes in MLsegmentr

--- a/pipes/reference_model.Rmd
+++ b/pipes/reference_model.Rmd
@@ -10,10 +10,7 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE)
 h2o::h2o.no_progress()
 devtools::load_all()
-```
-
-## Script parameters
-```{r}
+# Script parameters
 database <- "test_signauxfaibles"
 collection <- "Features"
 actual_period <- as.Date("2019-03-01")
@@ -22,6 +19,7 @@ min_effectif <- 10
 retrain_model <- TRUE
 type <- "dataframe"
 export_type <- c("csv", "mongodb")
+sample_size <- 1000
 ```
 
 ```{r}
@@ -36,13 +34,11 @@ task <- sf_task(
   experiment_aim = "Reference evaluation canvas",
   experiment_description = "This experiment fixes the conditions for the evaluation of a new algorithm compared to former versions"
 )
-```
 
-```{r}
 task <- load_hist_data(
   task = task,
   batch = "1905",
-  subsample = 200000
+  subsample = sample_size
 )
 ```
 
@@ -57,19 +53,24 @@ task  <- train(task)
 ```
 
 ```{r}
-task <- load_new_data(
-  task = task,
-  last_batch = "1905",
-  periods = actual_period
-  )
+#task <- load_new_data(
+#  task = task,
+#  last_batch = "1905",
+#  periods = actual_period
+#  )
 ```
 
 ```{r}
 task <- prepare(task, data_names = c("validation_data"))
 task <- predict(task, data_names = c("validation_data"))
-```
-
-```{r}
 task <- evaluate(task, data_name = "validation_data")
 task <- log(task)
 ```
+
+# OU
+```{r}
+task  <- full_light_gradient_boosting(
+  sample_size
+)
+```
+
